app/assets/stylesheets/project.css.scss
.project {

  .grid_table table {
    table-layout: auto;
    col.one {
      /*check box*/
      width: 33px;
    }
    col.two {
      /*project*/
      width: 94px;
    }
    col.three {
      /*clients*/
      width: 140px;
    }
    col.four {
      /*description*/
      width: 143px;
    }
    col.five {
      /*total*/
      width: 98px;
    }
    col.six {
      /*date*/
      width: 90px;
    }
    col.seven {
      /*due date*/
      width: 90px;
    }
    col.eight {
      /*status*/
      width: 90px;
    }
    col.nine {
      /*actions*/
      width: 62px;
    }
    &.de{
      col{
        &.one{
          width: 33px;
        }
        &.two{
          width: 120px;
        }
        &.three{
          width: 100px;
        }
        &.four{
          width: 105px;
        }
        &.five{
          width: 100px;
        }
        &.six{
          width: 202px;
        }
        &.seven{
          width: 90px;
        }
        &.eight{
          width: 90px;
        }
      }
    }
    &.fr{
      col{
        &.one{
          width: 33px;
        }
        &.two{
          width: 120px;
        }
        &.three{
          width: 100px;
        }
        &.four{
          width: 105px;
        }
        &.five{
          width: 100px;
        }
        &.six{
          width: 202px;
        }
        &.seven{
          width: 90px;
        }
        &.eight{
          width: 90px;
        }
      }
    }
  }
}


.chzn-container {
  .add-new {
    background-color: #00BDE5;
    border-radius: 3px 3px 3px 3px;
    color: white;
    height: 26px;
    margin: 10px;
    padding: 6px 0 0;
    text-align: center;
    vertical-align: middle;
    cursor: pointer;
    font-family: "Dosis Regular", sans-serif;
    font-size: 14px;
    text-transform:capitalize;
  }
}

._form {
  .grid_table table {
    tr.no_hover:hover {
      background-color: #FFFFFF;
    }
    td.add_line_item_row {
      padding: 15px 0 0 32px;
    }
  }
}


.remove_task, .remove_member {
  background: asset-url('del-move-icons.png') no-repeat scroll 0 0 transparent;
  float: left;
  height: 10px;
  width: 7px;
  position: relative;
  top: 3px;
  margin-right: 20px;
}
.remove_task:hover, .remove_member:hover {
  background-position: 0 -12px;
}

.task_bill{
  float: right;
}

table.task_grid_fields {
  .action_links {
    .remove_item {
      background: asset-url('del-move-icons.png') no-repeat scroll 0 0 transparent;
      float: left;
      height: 10px;
      width: 7px;
    }
    .remove_item:hover {
      background-position: 0 -12px;
    }
    .sort_icon {
      background: asset-url('del-move-icons.png') no-repeat scroll -7px 0 transparent;
      float: left;
      height: 12px;
      margin-left: 4px;
      width: 9px;
    }
    .sort_icon:hover {
      background-position: -7px -12px;
    }
  }
  tbody {
    tr td:first-child {
      vertical-align: middle;
    }
  }
}

.project_form {
  .fields_content{
    padding: 40px 0 23px 0;
  }
  .fields_content_container {
    width: 100%;
  }

  .fields_content_left {
    float: left;
    width: 50%;
    .chzn-container-single .chzn-single abbr{
      top: 7px;
      right: 18px;
    }
    .medium_field{
      input[type="text"]{
        width: 200px;
      }
    }
    select{
      width: 220px;
    }
  }
  .fields_content_right {
    float: right;
    width: 50%;
    .chzn-container-single .chzn-single abbr{
      top: 7px;
      right: 18px;
    }
    .medium_field{
      input[type="text"], input[type="number"]{
        width: 200px;
      }
    }
    select{
      width: 220px;
    }
    textarea{
      width: 200px;
    }

  }
  .fields_content_left .label_field{
    width: 100px;
  }
  .fields_content_right .label_field {
    width: 112px;
  }

  .field_row .btn {
    float: right;
    margin: 0 0 0 5px;
  }
  .label_field.textarea {
    float: none;
    padding: 0 0 7px 0;
  }
  .large_field textarea {
    width: 760px;
    margin-bottom: 6px;
  }
  .grid_table{
    padding: 0px;
  }
  table {
    width: 100%;
    border-collapse: separate;
  }
  .grid_table table tr:hover {
    background: none !important;
  }
  .grid_table table th:first-child {
    border-radius: 0px;
    background-color: #ffffff;
  }
  .grid_table table th:last-child {
    border-radius: 0 4px 4px 0 !important;
  }
  .grid_table table th:nth-child(2) {
    border-radius: 4px 0 0 4px;
  }
  .grid_table table tr:nth-child(2) td {
    padding-top: 11px;
  }
  .grid_table table td {
    border: none;
    padding: 3px 2px 4px 2px;
    vertical-align: top;
  }
  .grid_table table td:nth-child(2) {
    padding-left: 0px;
  }
  .grid_table table td:last-child {
    padding-right: 0px;
  }
  .grid_table table col.one {
    width: 5%;
  }
  .grid_table table col.two { /*item*/
    width: 35%;
  }
  .grid_table table col.three { /*description*/
    width: 40%;
  }
  .grid_table table col.four { /*unit cost*/
    width: 20%;
  }
  
  input.grid_small,
  .blank_input {
    width: 60px;
  }

  select.grid_small {
    width: 80px;
  }
  .grid_table table tr th:first-child {
    border-right: none !important;
  }
  input.grid_medium,
  .blank_input.grid_medium,
  select.grid_medium {
    width: 100px;
  }
  input.grid_large,
  .blank_input,
  select.grid_large {
    width: 150px;
  }
  input.grid_large_medium,
  .blank_input,
  select.grid_large_medium {
    width: 173px;
  }
  .grid_summary {
    //padding: 30px 0;
    float: right;
    margin: -26px 0 0;
    padding: 0 0 30px;
    width: 50%;
    &.custom{
      .grid_summary_content{
        width: 220px;
      }
      .grid_summary_title{
        width: 120px;
      }
      select{
        width: 60px;
      }
      .grid_summary_description{
        &.custom{
          padding-right: 0px;
        }
      }

    }
  }
  .grid_summary_content {
    width: 190px;
    float: right;
  }
  .grid_summary_row {
    float: left;
    width: 100%;
    min-height: 31px;
    ul li{
      min-height: 31px;
    }
    &.discount{
      min-height: 43px;
    }
  }
  .grid_summary_row.last {
    min-height: 23px;
  }
  .grid_summary_title {
    float: left;
    width: 110px;
    padding: 0 0 0 10px;
    .chzn-container{
      vertical-align: middle;
      .chzn-single span{
        margin-right: 0px;
      }
    }
    ul.chzn-results li{
      min-height: 15px;
    }
  }
  .grid_summary_description {
    float: right;
    width: 60px;
    padding: 0 10px 0 0;
    text-align: right;
    label {
      float: right;
      margin-bottom: 0px;
    }
  }
  .grid_summary_row.net_total {
    border-top: double #d7d7d7;
    border-bottom: double #d7d7d7;
    min-height: 34px;
    line-height: 34px;
    font-weight: bold;
  }
  .net_total_value {
    line-height: 34px;
  }
  .grid_table table td input, .grid_table table th input {
    margin: 0px;
  }
  .field_description.select li{
    line-height: normal;
  }
  select.per_page, select.discount_select{
    height: 28px;
    margin: 0 5px 3px;
    padding: 4px 3px 4px 2px;
    width: 51px;
  }
  input.invoice_discount{
    height: 28px;
    line-height: 28px;
    padding: 0 9px 0 9px;
    text-align: right;
    width: 42px;
  }
  .tasks_list, .members_list {
    width: 250px !important;
  }
  .grid_large.description{
    width: 280px !important;
  }
  .grid_small.rate{
    width: 80px !important;
  }

  td.add_task_row, td.add_member_row{
    padding-left: 20px !important;
  }

  #project_description{
    max-width: 200px;
    margin-bottom: 20px;
  }

}

#paging_links .chzn-single span{
  margin-right: 21px !important;
}

